obsplus master
  - obsplus.events.validate
    * Loosened check for duplicate pick ids to only check for duplicate
      P and S phases
    * Made amplitude time window check skip over rejected amplitudes
  - obsplus.utils
    * Fix issue #249 to allow pandas 1.4+
  - Dropped python 3.7 from test matrix to keep size managable.

obsplus 0.2.2
  - Added support for python 3.9, dropped python 3.6

obsplus 0.2.1
  - obsplus.utils
    * Handled edge case of a lower precision datetime64 causing an int64
      overflow in `obsplus.utils.time.to_datetime64` (#224).
  - obsplus.WaveBank
    * Refactored `get_waveforms_bulk` to allow a dataframe if required
      columns exist (#229).
  - Dependencies
    * Bumped pydantic min version to 1.8.2 and pandas min version to 1.0


obsplus 0.2.0
  - obsplus.structures.fetcher
    * fixed an edge case were banks with only one file failed to return
       streams (#186).
  - obsplus.structures.dxfextractor
    * Handled the case of null integers in the NSLC columns and added a logic
      to force the seed_id column to match the other NSLC columns(#199)
  - obsplus.utils
    * Fixed issue with duplicate channels setting incorrect start_dates
      on station level (#188, #190).
    * Fixed an issue with `picks_to_df` which would return the wrong channel
      code if the location code had a decimal. Now a ValueError is raised if
      any seed ids are found which don't have exactly 3 decimals (see #193).
    * Made sure that `SpatialCalculator` returns a meaningful error message if
      required columns are missing from DataFrame inputs (#197).
    * Fixed issue in df_to_inventory where a location code of '01' was getting
      converted to '1'. (#199)
    * Changed `merge_events` and `associate merge` to have option to reject old
      picks/amplitudes, removed option to delete old picks/amplitudes. (#209)
  - obsplus.EventBank
    * Added `overwrite_existing` keyword to `put_events` to disable squashing