@@ -16,7 +16,7 @@ repos:
     -   id: blacken-docs
         additional_dependencies: [black==21.5b1]
 -   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+    rev: 5.0.4
     hooks:
     -   id: flake8
         additional_dependencies:
